--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Grill Hub</title>
+    <title>Tortellini`s Restraunt</title>
 
     <!-- Favicon -->
     <link rel="icon" href="images/favicon (2).svg" />
@@ -94,7 +94,7 @@
                 <div>
                   <img
                     class="img-responsive"
-                    src="images/slider/slider-img-1.jpg"
+                    src="images/slider/slider-img-1.webp"
                     alt=""
                   />
                 </div>
@@ -115,14 +115,14 @@
                 <div>
                   <img
                     class="img-responsive"
-                    src="images/slider/slider-img-4.jpg"
+                    src="images/slider/slider-img-4.webp"
                     alt=""
                   />
                 </div>
                 <div>
                   <img
                     class="img-responsive"
-                    src="images/slider/slider-img-1.jpg"
+                    src="images/slider/slider-img-1.webp"
                     alt=""
                   />
                 </div>
@@ -155,18 +155,21 @@
             <div class="block">
               <img src="images/cooker-img.png" alt="cooker-img" />
               <h1 class="heading">
-                Your <span>Restaurant’s</span> <br />
-                Website Has To Look <span>Good</span>
+                Your <span>Tortellini`s</span> <br />
+                Restaraunt Has To Look <span>Good</span>
               </h1>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                enim <br />
-                ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-                ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-                reprehenderit in
-                <br />voluptate velit esse cillum dolore eu fugiat nulla
-                pariatur. Excepteur sint occaecat
+                Chef Zeyd: Meet our culinary maestro, Chef Zeyd, the creative
+                force behind the delectable delights at Grill Hub. With a
+                passion for crafting exquisite dishes and a flair for
+                innovation, Chef Zeyd brings a unique blend of flavors and
+                culinary expertise to your table. <br />
+                Culinary Delights: At Grill Hub, we take pride in offering a
+                diverse menu curated by Chef Zeyd. Indulge in a symphony of
+                flavors with our succulent steaks,
+                <br />mouthwatering waffles, flavorful Caesar salads, and
+                tantalizing tacos. Chef Zeyd's dedication to quality ingredients
+                and culinary mastery ensures an unforgettable dining experience.
               </p>
             </div>
           </div>
@@ -190,10 +193,9 @@
                     <img src="images/blog/blog-img-1.jpg" alt="blog-img" />
                   </div>
                   <div class="content-right">
-                    <h3>Homestyle Chicken Pot Pie</h3>
+                    <h3>Pizza with Mold</h3>
                     <p>
-                      Prepared in true New England fash-ion. Tender all-white
-                      meat chicken simmered...
+                      "Indulge in our unique pizza with savory toppings, including a delectable mold."
                     </p>
                   </div>
                 </li>
@@ -202,19 +204,17 @@
                     <img src="images/blog/blog-img-2.jpg" alt="blog-img" />
                   </div>
                   <div class="content-right">
-                    <h3>Homestyle Chicken Pot Pie</h3>
+                    <h3>Risotto</h3>
                     <p>
-                      Prepared in true New England fash-ion. Tender all-white
-                      meat chicken simmered...
+                      "To relish the timeless taste of classic, aged perfection, indulge in our vintage selection."
                     </p>
                   </div>
                 </li>
                 <li>
                   <div class="content-left">
-                    <h3>Homestyle Chicken Pot Pie</h3>
+                    <h3>Tiramisu</h3>
                     <p>
-                      Prepared in true New England fash-ion. Tender all-white
-                      meat chicken simmered...
+                      "Savor the heavenly layers of our exquisite Tiramisu, a dessert that transcends time."
                     </p>
                   </div>
                   <div class="blog-img-2">
@@ -223,14 +223,13 @@
                 </li>
                 <li>
                   <div class="content-left">
-                    <h3>Homestyle Chicken Pot Pie</h3>
+                    <h3>Pasta</h3>
                     <p>
-                      Prepared in true New England fash-ion. Tender all-white
-                      meat chicken simmered...
+                      "Indulge in the timeless perfection of our pasta dishes, crafted with passion and tradition."
                     </p>
                   </div>
                   <div class="blog-img-2">
-                    <img src="images/blog/blog-img-4.jpg" alt="blog-img" />
+                    <img src="images/blog/blog-img-4.webp" alt="blog-img" />
                   </div>
                 </li>
                 <li>
@@ -238,10 +237,9 @@
                     <img src="images/blog/blog-img-5.jpg" alt="blog-img" />
                   </div>
                   <div class="content-right">
-                    <h3>Homestyle Chicken Pot Pie</h3>
+                    <h3>Ravioli</h3>
                     <p>
-                      Prepared in true New England fash-ion. Tender all-white
-                      meat chicken simmered...
+                      "Savor the delicate flavors of our exquisite ravioli, handmade to perfection for an unforgettable dining experience."
                     </p>
                   </div>
                 </li>
@@ -250,10 +248,9 @@
                     <img src="images/blog/blog-img-6.jpg" alt="blog-img" />
                   </div>
                   <div class="content-right">
-                    <h3>Homestyle Chicken Pot Pie</h3>
+                    <h3>Fresh Crostini</h3>
                     <p>
-                      Prepared in true New England fash-ion. Tender all-white
-                      meat chicken simmered...
+                      "Indulge in the crispy perfection of our crostini, topped with delectable ingredients for an enticing burst of flavors in every bite."
                     </p>
                   </div>
                 </li>
@@ -278,9 +275,7 @@
                 our <span>MENU</span> the <span>PRICE</span>
               </h1>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                enim ad minim veniam, quis nostrud exercitation ullamco
+                "Embark on a culinary journey with our Greedig selection at Trotellini's Restaurant. From rich pastas to savory risottos, savor the finest flavors curated to satisfy your indulgent cravings."
               </p>
               <div class="pricing-list">
                 <div class="title">
@@ -291,84 +286,72 @@
                   <li>
                     <div class="item">
                       <div class="item-title">
-                        <h2>Pancakes n' Such</h2>
-                        <div class="border-bottom"></div>
-                        <span>$ 25.00</span>
-                      </div>
-                      <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore
-                        magna aliqua. Ut enim ad minim&&
-                      </p>
-                    </div>
-                  </li>
-                  <li>
-                    <div class="item">
-                      <div class="item-title">
-                        <h2>Homestyle Chicken Pot Pie</h2>
-                        <div class="border-bottom"></div>
-                        <span>$ 10.00</span>
-                      </div>
-                      <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore
-                        magna aliqua. Ut enim ad minim&&
-                      </p>
-                    </div>
-                  </li>
-                  <li>
-                    <div class="item">
-                      <div class="item-title">
-                        <h2>Cereal, Panecillos y Frutas</h2>
-                        <div class="border-bottom"></div>
-                        <span>$ 5.00</span>
-                      </div>
-                      <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore
-                        magna aliqua. Ut enim ad minim&&
-                      </p>
-                    </div>
-                  </li>
-                  <li>
-                    <div class="item">
-                      <div class="item-title">
-                        <h2>Meat of Skewers</h2>
+                        <h2>Pizza with Mold</h2>
                         <div class="border-bottom"></div>
                         <span>$ 15.00</span>
                       </div>
                       <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore
-                        magna aliqua. Ut enim ad minim&&
+                        "Delight in our unique Pizza with Mold at Trotellini's. Experience bold flavors and a special price that turns an ordinary pizza into an extraordinary culinary adventure."
                       </p>
                     </div>
                   </li>
                   <li>
                     <div class="item">
                       <div class="item-title">
-                        <h2>Steak with a Garlic and Parsley Risotto</h2>
+                        <h2>Risotto</h2>
                         <div class="border-bottom"></div>
-                        <span>$ 75.00</span>
+                        <span>$ 20.00</span>
                       </div>
                       <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore
-                        magna aliqua. Ut enim ad minim&&
+                        "Experience the unique and flavorful delight of our Moldy Pizza at Trotellini's. A surprising twist that adds character to every slice, creating an unforgettable dining adventure."
                       </p>
                     </div>
                   </li>
                   <li>
                     <div class="item">
                       <div class="item-title">
-                        <h2>Caesar Salad</h2>
+                        <h2>Tiramisu</h2>
                         <div class="border-bottom"></div>
-                        <span>$ 7.00</span>
+                        <span>$ 9.00</span>
                       </div>
                       <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore
-                        magna aliqua. Ut enim ad minim&&
+                        "Indulge in the classic allure of our Tiramisu. Layers of coffee-soaked ladyfingers and mascarpone, creating a heavenly dessert that captures the essence of Italian sweetness at Trotellini's."
+                      </p>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="item">
+                      <div class="item-title">
+                        <h2>Pasta</h2>
+                        <div class="border-bottom"></div>
+                        <span>$ 14.00</span>
+                      </div>
+                      <p>
+                        "Experience a symphony of flavors with our exquisite pasta dishes. Crafted with the finest ingredients and culinary expertise, our pastas promise to elevate your dining experience at Trotellini's."
+                      </p>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="item">
+                      <div class="item-title">
+                        <h2>Ravioli</h2>
+                        <div class="border-bottom"></div>
+                        <span>$ 45.00</span>
+                      </div>
+                      <p>
+                        "Savor the delicate perfection of our handmade ravioli. Each bite is a culinary delight, showcasing the freshest ingredients and expert craftsmanship. Explore the extraordinary at Trotellini's."
+                      </p>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="item">
+                      <div class="item-title">
+                        <h2>Crostini</h2>
+                        <div class="border-bottom"></div>
+                        <span>$ 27.00</span>
+                      </div>
+                      <p>
+                        "Indulge in the exquisite flavors of our crostini, where crispy bread meets delectable toppings. Each bite is a symphony of taste, a perfect harmony at Trotellini's."
                       </p>
                     </div>
                   </li>
@@ -392,8 +375,7 @@
             <div class="block">
               <h1 class="heading">SUBSCRIBE <span>to our</span> NEWSLETTER</h1>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod
+                "Stay in the loop with Trotellini's! Subscribe to our newsletter for exclusive updates, mouthwatering offers, and a sneak peek into the culinary world. Join us on a journey of flavors!"
               </p>
               <form class="form-inline">
                 <div class="form-group">
@@ -454,7 +436,8 @@
                   ></textarea>
                 </div>
                 <button class="btn btn-default" type="submit">
-                  send your message
+                  SEND YOUR MESSAGE
+
                 </button>
               </form>
             </div>
@@ -474,15 +457,15 @@
                 <ul>
                   <li>
                     <h4><i class="fa fa-phone"></i>Phone</h4>
-                    <p>(000) 123 456 78- (000) 123 4567 89</p>
+                    <p>(+994) 50 394-00-80 </br>+994(10)710-00-80</p>
                   </li>
                   <li>
                     <h4><i class="fa fa-map-marker"></i>Address</h4>
-                    <p>1000 Azerbaijan, Baku</p>
+                    <p>1007 Italy Plaza 13</p>
                   </li>
                   <li>
                     <h4><i class="fa fa-envelope"></i>Email</h4>
-                    <p>rest@gmail.com</p>
+                    <p>tortallini@gmail.com</p>
                   </li>
                 </ul>
               </div>
@@ -497,15 +480,15 @@
                   <li>
                     <h4><a href="#">Nov 9-2023</a></h4>
                     <p>
-                      Lorem ipsum dolor sit amet, consectetur adip iscing elit.
-                      Curabitur ut blandit sapien
+                      Pizza Perfection: A Slice of Heaven
+                      Explore the art of pizza-making at Trotellini's! From classic Margherita to exotic toppings, our pizzas are a symphony of flavors. Indulge in the perfect slice.
                     </p>
                   </li>
                   <li>
                     <h4><a href="#">Sep 8-2023</a></h4>
                     <p>
-                      Lorem ipsum dolor sit amet, consectetur adip iscing elit.
-                      Curabitur ut blandit sapien
+                      Pasta Passion Unleashed
+Dive into the world of pasta at Trotellini's. From al dente classics to innovative creations, savor the rich textures and aromatic sauces in every forkful. Pasta paradise awaits!
                     </p>
                   </li>
                 </ul>
