--- a/index.html
+++ b/index.html
@@ -503,22 +503,22 @@ Dive into the world of pasta at Trotellini's. From al dente classics to innovati
                 <ul>
                   <li>
                     <a href="#"
-                      ><img src="images/photo/photo-1.jpg" alt=""
+                      ><img src="images/photo/little-img-1.jpg" alt=""
                     /></a>
                   </li>
                   <li>
                     <a href="#"
-                      ><img src="images/photo/photo-2.jpg" alt=""
+                      ><img src="images/photo/little-img-2.jpg" alt=""
                     /></a>
                   </li>
                   <li>
                     <a href="#"
-                      ><img src="images/photo/photo-3.jpg" alt=""
+                      ><img src="images/photo/little-img-3.jpg" alt=""
                     /></a>
                   </li>
                   <li>
                     <a href="#"
-                      ><img src="images/photo/photo-4.jpg" alt=""
+                      ><img src="images/photo/little-img-4.webp" alt=""
                     /></a>
                   </li>
                 </ul>
