--- a/index.html
+++ b/index.html
@@ -195,7 +195,8 @@
                   <div class="content-right">
                     <h3>Pizza with Mold</h3>
                     <p>
-                      "Indulge in our unique pizza with savory toppings, including a delectable mold."
+                      "Indulge in our unique pizza with savory toppings,
+                      including a delectable mold."
                     </p>
                   </div>
                 </li>
@@ -206,7 +207,8 @@
                   <div class="content-right">
                     <h3>Risotto</h3>
                     <p>
-                      "To relish the timeless taste of classic, aged perfection, indulge in our vintage selection."
+                      "To relish the timeless taste of classic, aged perfection,
+                      indulge in our vintage selection."
                     </p>
                   </div>
                 </li>
@@ -214,7 +216,8 @@
                   <div class="content-left">
                     <h3>Tiramisu</h3>
                     <p>
-                      "Savor the heavenly layers of our exquisite Tiramisu, a dessert that transcends time."
+                      "Savor the heavenly layers of our exquisite Tiramisu, a
+                      dessert that transcends time."
                     </p>
                   </div>
                   <div class="blog-img-2">
@@ -225,7 +228,8 @@
                   <div class="content-left">
                     <h3>Pasta</h3>
                     <p>
-                      "Indulge in the timeless perfection of our pasta dishes, crafted with passion and tradition."
+                      "Indulge in the timeless perfection of our pasta dishes,
+                      crafted with passion and tradition."
                     </p>
                   </div>
                   <div class="blog-img-2">
@@ -239,7 +243,9 @@
                   <div class="content-right">
                     <h3>Ravioli</h3>
                     <p>
-                      "Savor the delicate flavors of our exquisite ravioli, handmade to perfection for an unforgettable dining experience."
+                      "Savor the delicate flavors of our exquisite ravioli,
+                      handmade to perfection for an unforgettable dining
+                      experience."
                     </p>
                   </div>
                 </li>
@@ -250,13 +256,19 @@
                   <div class="content-right">
                     <h3>Fresh Crostini</h3>
                     <p>
-                      "Indulge in the crispy perfection of our crostini, topped with delectable ingredients for an enticing burst of flavors in every bite."
+                      "Indulge in the crispy perfection of our crostini, topped
+                      with delectable ingredients for an enticing burst of
+                      flavors in every bite."
                     </p>
                   </div>
                 </li>
               </ul>
 
-              <a class="btn btn-default btn-more-info" href="#" role="button">
+              <a
+                class="btn btn-default btn-more-info"
+                href="https://www.youtube.com/watch?v=0NbfkeR8Rtw"
+                role="button"
+              >
                 More Info
               </a>
             </div>
@@ -275,7 +287,10 @@
                 our <span>MENU</span> the <span>PRICE</span>
               </h1>
               <p>
-                "Embark on a culinary journey with our Greedig selection at Trotellini's Restaurant. From rich pastas to savory risottos, savor the finest flavors curated to satisfy your indulgent cravings."
+                "Embark on a culinary journey with our Greedig selection at
+                Trotellini's Restaurant. From rich pastas to savory risottos,
+                savor the finest flavors curated to satisfy your indulgent
+                cravings."
               </p>
               <div class="pricing-list">
                 <div class="title">
@@ -291,7 +306,10 @@
                         <span>$ 15.00</span>
                       </div>
                       <p>
-                        "Delight in our unique Pizza with Mold at Trotellini's. Experience bold flavors and a special price that turns an ordinary pizza into an extraordinary culinary adventure."
+                        "Delight in our unique Pizza with Mold at Trotellini's.
+                        Experience bold flavors and a special price that turns
+                        an ordinary pizza into an extraordinary culinary
+                        adventure."
                       </p>
                     </div>
                   </li>
@@ -303,7 +321,10 @@
                         <span>$ 20.00</span>
                       </div>
                       <p>
-                        "Experience the unique and flavorful delight of our Moldy Pizza at Trotellini's. A surprising twist that adds character to every slice, creating an unforgettable dining adventure."
+                        "Experience the unique and flavorful delight of our
+                        Moldy Pizza at Trotellini's. A surprising twist that
+                        adds character to every slice, creating an unforgettable
+                        dining adventure."
                       </p>
                     </div>
                   </li>
@@ -315,7 +336,10 @@
                         <span>$ 9.00</span>
                       </div>
                       <p>
-                        "Indulge in the classic allure of our Tiramisu. Layers of coffee-soaked ladyfingers and mascarpone, creating a heavenly dessert that captures the essence of Italian sweetness at Trotellini's."
+                        "Indulge in the classic allure of our Tiramisu. Layers
+                        of coffee-soaked ladyfingers and mascarpone, creating a
+                        heavenly dessert that captures the essence of Italian
+                        sweetness at Trotellini's."
                       </p>
                     </div>
                   </li>
@@ -327,7 +351,10 @@
                         <span>$ 14.00</span>
                       </div>
                       <p>
-                        "Experience a symphony of flavors with our exquisite pasta dishes. Crafted with the finest ingredients and culinary expertise, our pastas promise to elevate your dining experience at Trotellini's."
+                        "Experience a symphony of flavors with our exquisite
+                        pasta dishes. Crafted with the finest ingredients and
+                        culinary expertise, our pastas promise to elevate your
+                        dining experience at Trotellini's."
                       </p>
                     </div>
                   </li>
@@ -339,7 +366,10 @@
                         <span>$ 45.00</span>
                       </div>
                       <p>
-                        "Savor the delicate perfection of our handmade ravioli. Each bite is a culinary delight, showcasing the freshest ingredients and expert craftsmanship. Explore the extraordinary at Trotellini's."
+                        "Savor the delicate perfection of our handmade ravioli.
+                        Each bite is a culinary delight, showcasing the freshest
+                        ingredients and expert craftsmanship. Explore the
+                        extraordinary at Trotellini's."
                       </p>
                     </div>
                   </li>
@@ -351,13 +381,18 @@
                         <span>$ 27.00</span>
                       </div>
                       <p>
-                        "Indulge in the exquisite flavors of our crostini, where crispy bread meets delectable toppings. Each bite is a symphony of taste, a perfect harmony at Trotellini's."
+                        "Indulge in the exquisite flavors of our crostini, where
+                        crispy bread meets delectable toppings. Each bite is a
+                        symphony of taste, a perfect harmony at Trotellini's."
                       </p>
                     </div>
                   </li>
                 </ul>
 
-                <a class="btn btn-default pull-right" href="#" role="button"
+                <a
+                  class="btn btn-default pull-right"
+                  href="https://www.youtube.com/watch?v=wGcBXDFDwUA"
+                  role="button"
                   >More Info</a
                 >
               </div>
@@ -375,7 +410,9 @@
             <div class="block">
               <h1 class="heading">SUBSCRIBE <span>to our</span> NEWSLETTER</h1>
               <p>
-                "Stay in the loop with Trotellini's! Subscribe to our newsletter for exclusive updates, mouthwatering offers, and a sneak peek into the culinary world. Join us on a journey of flavors!"
+                "Stay in the loop with Trotellini's! Subscribe to our newsletter
+                for exclusive updates, mouthwatering offers, and a sneak peek
+                into the culinary world. Join us on a journey of flavors!"
               </p>
               <form class="form-inline">
                 <div class="form-group">
@@ -437,7 +474,6 @@
                 </div>
                 <button class="btn btn-default" type="submit">
                   SEND YOUR MESSAGE
-
                 </button>
               </form>
             </div>
@@ -457,12 +493,14 @@
                 <ul>
                   <li>
                     <h4><i class="fa fa-phone"></i>Phone</h4>
-                    <p>(+994) 50 394-00-80 </br>+994(10)710-00-80</p>
+                    <p>(+994) 50 394-00-80 <br />+994(10)710-00-80</p>
                   </li>
+                  <br />
                   <li>
                     <h4><i class="fa fa-map-marker"></i>Address</h4>
                     <p>1007 Italy Plaza 13</p>
                   </li>
+                  <br />
                   <li>
                     <h4><i class="fa fa-envelope"></i>Email</h4>
                     <p>tortallini@gmail.com</p>
@@ -480,15 +518,20 @@
                   <li>
                     <h4><a href="#">Nov 9-2023</a></h4>
                     <p>
-                      Pizza Perfection: A Slice of Heaven
-                      Explore the art of pizza-making at Trotellini's! From classic Margherita to exotic toppings, our pizzas are a symphony of flavors. Indulge in the perfect slice.
+                      Pizza Perfection: A Slice of Heaven Explore the art of
+                      pizza-making at Trotellini's! From classic Margherita to
+                      exotic toppings, our pizzas are a symphony of flavors.
+                      Indulge in the perfect slice.
                     </p>
                   </li>
+
                   <li>
                     <h4><a href="#">Sep 8-2023</a></h4>
                     <p>
-                      Pasta Passion Unleashed
-Dive into the world of pasta at Trotellini's. From al dente classics to innovative creations, savor the rich textures and aromatic sauces in every forkful. Pasta paradise awaits!
+                      Pasta Passion Unleashed Dive into the world of pasta at
+                      Trotellini's. From al dente classics to innovative
+                      creations, savor the rich textures and aromatic sauces in
+                      every forkful. Pasta paradise awaits!
                     </p>
                   </li>
                 </ul>
@@ -528,12 +571,15 @@ Dive into the world of pasta at Trotellini's. From al dente classics to innovati
                 <h3>Follow <span>US</span></h3>
                 <ul>
                   <li>
-                    <a href="#">
-                      <i class="fa-brands fa-twitter"></i>
+                    <a href="https://www.instagram.com/tortallinisrest/">
+                      <i
+                        class="fa-brands fa-instagram"
+                        style="font-size: 24px"
+                      ></i>
                     </a>
                   </li>
                   <li>
-                    <a href="#">
+                    <a href="https://www.facebook.com/public/Tortellini">
                       <i class="fa-brands fa-facebook"></i>
                     </a>
                   </li>
