--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
               <img src="images/cooker-img.png" alt="cooker-img" />
               <h1 class="heading">
                 Your <span>Tortellini`s</span> <br />
-                Restaraunt Has To Look <span>Good</span>
+                Restaraunt <span>INFO</span>
               </h1>
               <p>
                 Chef Zeyd: Meet our culinary maestro, Chef Zeyd, the creative
@@ -168,8 +168,7 @@
                 diverse menu curated by Chef Zeyd. Indulge in a symphony of
                 flavors with our succulent steaks,
                 <br />mouthwatering waffles, flavorful Caesar salads, and
-                tantalizing tacos. Chef Zeyd's dedication to quality ingredients
-                and culinary mastery ensures an unforgettable dining experience.
+                tantalizing tacos.
               </p>
             </div>
           </div>
@@ -414,7 +413,7 @@
                 for exclusive updates, mouthwatering offers, and a sneak peek
                 into the culinary world. Join us on a journey of flavors!"
               </p>
-              <form class="form-inline">
+              <form class="form-inline" onsubmit="sendSubmit(event)">
                 <div class="form-group">
                   <div class="input-group">
                     <input
